[package]
name = "stock-prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.171", features = ["serde_derive"] }
surf = "2.3.2"
time = { version = "0.3.22", features = ["formatting", "macros"] }
